# Project2

./: .flake8  README.md  main.py  pyproject.toml
data/: vacancies.json
htmlcov/: index.html
src/api/: abstract_api.py  hh_api.py
src/models/: vacancy.py
src/storage/: abstract_storage.py  json_storage.py
src/utils/: filters.py
tests/: test_filters.py  test_hh_api.py  test_storage.py  test_vacancy.py
