[project]
name = "project2"
version = "0.1.0"
description = ""
authors = [
    {name = "Aliaksandra",email = "aliaksandra.krot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
pytest-cov = "^6.2.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = "venv"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | build
  | dist
  | migrations
  | .*egg-info
  | __pycache__
  | node_modules
)/
'''


[tool.isort]
multi_line_output = 1
line_length = 119
force_single_line = true